# BundleAdjustment

./: CMakeLists.txt  README.md  photogrammetricSpatialResection11.m  photogrammetricSpatialResection13.m
Matlab/: Multiple_Circular_Centroid_Extraction_interpolate7.m  Multiple_Circular_Centroid_Extraction_interpolate8.m  Target_Segmentation_From_Seed_Points4.m  dlt.m  outlierRemoval.m  photogrammetricSpatialResection11.m  photogrammetricSpatialResection12.m  photogrammetricSpatialResection13.m  photogrammetricSpatialResection2.m  photogrammetricSpatialResection9.m  plotOutput.m  plotResults.m  quaternionExp.m  quaternionLog.m  quaternionToRotationMatrix.m  rotationMatrixToOPK.m  rotationMatrixToQuaternion.m
python/: AccuracyAssessmentEOP.py  decisionTree.py  decisionTreeRename.py  gaussianProcess.py  nearestNeighbour.py  nearestNeighbourApply.py  nearestNeighbourRename.py  plotBundleAdjustment.py  plotResiduals.py  splitTrainingTestingData.py  testML.py
src/: main.cpp
